# flex

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  bump.sh  install.sh  publish.sh  pyproject.toml
.github/workflows/: build-mac.yml  ci.yml  pypi-publish.yml
claude/agents/: flx-trace.md
claude/commands/flex/: agent.md
docs/claude_code/: README.md
docs/mcp/: README.md
flex/: __init__.py  __main__.py  cli.py  core.py  daemon.py  engine.py  health.py  instructions.py  mcp_core.py  mcp_server.py  mcp_server.service  refresh.py  registry.py  sdk.py  secrets.py  serve.py  views.py
flex-embed/: Cargo.toml
flex-embed/src/: db.rs  embed.rs  main.rs
flex/ai/agents/: flx-trace.md  trace.md
flex/ai/commands/flex/: agent.md  search.md
flex/ai/skills/flex/: SKILL.md
flex/ai/skills/flex-arxiv/: SKILL.md
flex/ai/skills/flex-github/: SKILL.md
flex/ai/skills/flex-hn/: SKILL.md
flex/ai/skills/flex-markdown/: SKILL.md
flex/ai/skills/flex-reddit/: SKILL.md
flex/ai/skills/flex-sessions/: SKILL.md
flex/ai/skills/flex-sessions-claudecode/: SKILL.md
flex/ai/skills/flex-sessions-codex/: SKILL.md
flex/ai/skills/flex-sessions-goose/: SKILL.md
flex/ai/skills/flex-tools/: SKILL.md
flex/claude/agents/: flx-trace.md
flex/compile/: __init__.py  chunkers.py  embed.py  markdown.py
flex/distribute/: __init__.py  manifest.py  push.py
flex/manage/: install_presets.py  meditate.py
flex/modules/: __init__.py  specs.py
flex/modules/arxiv/: README.md  install.py
flex/modules/arxiv/compile/: arxiv_api.py  expand.py  latex_parser.py  refresh.py  semantic_scholar.py  worker.py
flex/modules/arxiv/stock/: instructions.md
flex/modules/claude_chat/compile/: worker.py
flex/modules/claude_code/: README.md  __init__.py  coding_agent_install.py  coding_agent_watch.py  contract.py  enrichment.py  install.py  resume.py
flex/modules/claude_code/compile/: __init__.py  scope.py  soft_detect.py  worker.py
flex/modules/claude_code/manage/: __init__.py  backfill_file_bodies.py  backfill_metadata.py  backfill_snapshots.py  delegation_graph.py  enrich_delegation.py  enrich_file_graph.py  enrich_repo_project.py  enrich_soma_repos.py  enrich_summary.py  file_graph.py  fingerprint.py  noise.py  rebuild_all.py
flex/modules/claude_code/presets/: decisions.sql  digest.sql  feedback.sql  file-hotspots.sql  orient.sql  session.sql  story.sql
flex/modules/claude_code/stock/: instructions.md
flex/modules/codex/: README.md  __init__.py  install.py  refresh.py  sources.py
flex/modules/codex/compile/: worker.py
flex/modules/codex/stock/: instructions.md
flex/modules/docpac/compile/: init.py  worker.py
flex/modules/github/: README.md  install.py
flex/modules/github/compile/: github_api.py  refresh.py  worker.py
flex/modules/github/stock/: instructions.md
flex/modules/goose/: README.md  __init__.py  install.py  refresh.py
flex/modules/goose/compile/: worker.py
flex/modules/goose/stock/: instructions.md
flex/modules/hn/: README.md  install.py
flex/modules/hn/compile/: algolia.py  refresh.py  worker.py
flex/modules/hn/stock/: instructions.md
flex/modules/lobsters/compile/: refresh.py  worker.py
flex/modules/markdown/: README.md  install.py
flex/modules/markdown/compile/: chunker.py  dataview.py  frontmatter.py  graph.py  init.py  tags.py  walker.py  wikilinks.py  worker.py
flex/modules/markdown/stock/: instructions.md
flex/modules/reddit/: README.md  install.py
flex/modules/reddit/compile/: arctic_shift.py  refresh.py  scope.py  worker.py
flex/modules/skills/: README.md  install.py
flex/modules/soma/: __init__.py  coding_agent.py  compile.py  tables.sql
flex/onnx/: embed.py  fetch.py  nomic_embed.py
flex/retrieve/: __init__.py  _scoring.py  doc_mounts.py  execute.py  keyword.py  presets.py  score.py  vec_ops.py
flex/retrieve/_scoring_rs/: Cargo.toml  pyproject.toml
flex/utils/: install_presets.py
flexsearch/: __init__.py  chain.py  core.py  mcp_server.py  meditate.py  registry.py  views.py
flexsearch/compile/: docpac.py
flexsearch/manage/: __init__.py  meditate.py
flexsearch/onnx/: embed.py
flexsearch/retrieve/: __init__.py  presets.py  vec_search.py
flexsearch/retrieve/presets/: introspect-flat.sql  introspect.sql
flexsearch/utils/: install_presets.py
operations/d9ca9afd-5445-4762-bcdb-091a858ae5da/: 2026-02-17T1500-standardize-sessions-view.sql  2026-02-17T1505-rename-claude-to-claude-chat.sql
operations/e7547b39-8e64-47b4-aa4d-7efedac0f9b6/: 2026-02-18T1400-plan12-warmup-classification.sql  2026-02-19T1430-add-parent-uuid-types-message.sql
scripts/: enrich_session_summary.py  init-docpac.py  migrate_presets.py  migrate_registry.py  mirror_assets.py  plan45_execute.py  reembed_nomic.py  swap_cell.sh
tests/: conftest.py  test_core.py  test_docpac.py  test_docpac_worker.py  test_fingerprint.py  test_init_e2e.py  test_meditate.py  test_presets.py  test_presets_security.py  test_registry.py  test_schema_contract.py  test_unified_sync.py  test_vec_ops.py  test_vec_search.py
tests/docker/: Dockerfile.dirty-conda  Dockerfile.dirty-devtools  Dockerfile.dirty-minimal  Dockerfile.dirty-upgrade  Dockerfile.e2e  Dockerfile.pypi  flex-serve.sh  run_all.py  run_dirty.py  run_e2e.py  run_install_degraded.py  seed_sessions.py
utils/: README.md  flex-resume
views/claude_code/: messages.sql  sessions.sql
(+124 files in other folders)
