[package]
name = "flex-embed"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Standalone embedding binary for flex knowledge cells"

[[bin]]
name = "flex-embed"
path = "src/main.rs"

[dependencies]
ort = "2.0.0-rc.12"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ndarray = "0.16"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dirs = "6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
